force-app/main/default/objects/Contact/fields/Age_Year__c.field-meta.xml
<CustomField>
    <fullName>Age_Year__c</fullName>
    <formula>IF( Age__c &lt; 12, Text(Age__c) + &apos;M&apos;, Text(MFLOOR (Age__c/12)) + &apos;Y&apos; + &apos; &apos; + Text(Age__c - (MFLOOR (Age__c/12) * 12)) + &apos;M&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age Year</label>
    <type>Text</type>
</CustomField>