force-app/main/default/objects/Contact/fields/KPI_Category_Management__c.field-meta.xml
<CustomField>
    <fullName>KPI_Category_Management__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>KPI Category Management</label>
    <referenceTo>KPI_Category_Management__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>