force-app/main/default/objects/Contact/fields/On_Work__c.field-meta.xml
<CustomField>
    <fullName>On_Work__c</fullName>
    <defaultValue>false</defaultValue>
    <description>User đang đi làm</description>
    <label>On Work</label>
    <type>Checkbox</type>
</CustomField>