force-app/main/default/objects/Contact/fields/Province__c.field-meta.xml
<CustomField>
    <fullName>Province__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Province</label>
    <referenceTo>Province__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>