force-app/main/default/objects/Contact/fields/Remind_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Remind_Date_Time__c</fullName>
    <label>Remind Date Time</label>
    <type>DateTime</type>
</CustomField>