force-app/main/default/objects/Contact/fields/Remind_Roster__c.field-meta.xml
<CustomField>
    <fullName>Remind_Roster__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remind Roster</label>
    <type>Checkbox</type>
</CustomField>