force-app/main/default/objects/Contact/fields/Staff_Code__c.field-meta.xml
<CustomField>
    <fullName>Staff_Code__c</fullName>
    <externalId>true</externalId>
    <label>Staff Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>