force-app/main/default/objects/Contact/fields/Sub_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Sub_Mobile__c</fullName>
    <label>Sub Mobile</label>
    <type>Phone</type>
</CustomField>