force-app/main/default/objects/Contact/fields/Tech_Role__c.field-meta.xml
<CustomField>
    <fullName>Tech_Role__c</fullName>
    <label>Technician Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Technician / Detailing specialist</fullName>
            </value>
            <value>
                <fullName>Advance technician</fullName>
            </value>
            <value>
                <fullName>Chief technician / Detailing expert</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>